tests/golden/errors/is_value_type.py
x = 5
if x is 5:
    print("unreachable")
